Version 3.4b3 (2011-01-xx)
	Fixed bug where anchors would wrap the text contents after it due to a bug in the DomParser logic.
	Fixed bug where the selected state wouldn't be removed on ListBox controls when a menu item was selected.
Version 3.4b2 (2011-01-13)
	Added new custom flash player, this player supports mp4 and flv and has skin support.
	Fixed so mceInsertContent handles context correctly to enforce valid nesting of elements.
	Fixed bug where scrolling would become jerky on IE on some contents.
	Fixed bug where paste as plain text would throw exception of missing entities setting.
	Fixed bug where anchor nodes where removed by the new serializer engine.
	Fixed bug where IE would crash if when backspace where used on some specific contents.
	Fixed bug where pasting of plain text in WebKit would result in merging of text lines.
	Fixed bug where it wasn't possible to delete images or tables using backspace on IE9.
	Fixed bug where urls in styles would generate a JS error due to incorrect scope.
	Fixed bug where copy paste from Java applications would produce extra contents in FF on Mac.
	Fixed bug where the verify_html option wouldn't allow all elements and attributes.
Version 3.4b1 (2010-12-20)
	Added new serialization engine that increases performance and enforces valid output according to the specified schema settings.
	Added new HTML parser logic used by the serialization engine and can handle malformed html contents.
	Added new valid_children config option, enables more fine grain control of elements can be inside other elements.
	Added new entities encoding logic boost performance and will only encode entities based on context i.e. attributes/text nodes.
	Added new protect setting that enables users to protect template items from being removed by the serializer logic.
	Added new {$caret} marker for the mceInsertContent command. Makes it possible to move the caret to a specific position when inserting contents.